[project]
name = "CnGalCalendar"
version = "4.2.4"
description = "CnGal 游戏发售日历"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [{ name = "Vinfall" }]
keywords = ["calendar", "cngal", "cngal-api", "galgame", "game", "icalendar", "ics", "visualnovel"]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Private :: Do Not Upload",
  "Programming Language :: Python :: 3",
  "Topic :: File Formats",
  "Topic :: Games/Entertainment",
]
dependencies = ["dateparser>=1.2.2", "ics==0.8.0.dev0", "requests>=2.32.5"]

[project.urls]
changelog = "https://github.com/Vinfall/CnGalCalendar/blob/main/CHANGELOG.md"
homepage = "https://github.com/Vinfall/CnGalCalendar"
issues = "https://github.com/Vinfall/CnGalCalendar/issues"
source = "https://github.com/Vinfall/CnGalCalendar"

[tool.ruff]
# force-exclude = true
unsafe-fixes = true

# https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "E501", # EditorConfig
  "COM", # commas
  "D1", # docstring
  "D212",
  "D203", # prefer D211
  "ERA", # commented-out-code
  "FIX", # fixme
  "TD002", # todo
  "TD003",
  "PLR2004", # magic-value-comparison
  "PTH", # flake8-use-pathlib: slower than os
  "RET505", # superfluous-else-return
  "T20", # print
]
# unfixable = ["F401"]

[tool.ty.rules]
unresolved-import = "ignore" # .venv excluded from vsc workspace
